Fixed Upright Text Orientation on Safari IOS

--- a/css/main.scss
+++ b/css/main.scss
@@ -262,6 +262,7 @@ section .title-line {
 
 #WORK h3 {
     text-orientation: upright;
+    -webkit-text-orientation: upright;
     writing-mode: vertical-lr;
     font-weight: 500;
     font-size: 1.5rem;
@@ -473,8 +474,8 @@ footer {
     }
 
     header .navbar-brand img{
-        width: 90px; 
-        height: 60px;
+        width: 85px; 
+        height: 55px;
         padding: 5px;
     }
 
@@ -583,6 +584,7 @@ footer {
 
     #WORK h3 {
         writing-mode: vertical-lr;
+        -webkit-text-orientation: upright;
         text-orientation: upright;
         font-weight: 500;
         font-size: 1.25rem;
@@ -720,8 +722,8 @@ footer {
     }
 
       header .navbar-brand img{
-        width: 90px; 
-        height: 60px;
+        width: 85px; 
+        height: 55px;
         padding: 5px;
     }
 
@@ -834,6 +836,7 @@ footer {
 
     #WORK h3 {
         writing-mode: vertical-lr;
+        -webkit-text-orientation: upright;
         text-orientation: upright;
         font-weight: 500;
         font-size: 0.65rem;
@@ -1085,6 +1088,7 @@ footer {
 
     #WORK h3 {
         writing-mode: vertical-lr;
+        -webkit-text-orientation: upright;
         text-orientation: upright;
         font-weight: 500;
         font-size: 1.25rem;
@@ -1281,6 +1285,7 @@ footer {
 
     #WORK h3 {
         writing-mode: vertical-lr;
+        -webkit-text-orientation: upright;
         text-orientation: upright;
         font-weight: 500;
         font-size: 1.25rem;
@@ -1468,6 +1473,7 @@ footer {
 
     #WORK h3 {
         writing-mode: vertical-lr;
+        -webkit-text-orientation: upright;
         text-orientation: upright;
         font-weight: 500;
         font-size: 1.25rem;
